This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Missing declaration of _PyObject_GetMethod
Type: Stage: resolved
Components: Interpreter Core Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: jdemeyer, methane, yselivanov
Priority: normal Keywords: patch

Created on 2019-06-12 12:54 by jdemeyer, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 14015 merged jdemeyer, 2019-06-12 13:00
Messages (2)
msg345336 - (view) Author: Jeroen Demeyer (jdemeyer) * (Python triager) Date: 2019-06-12 12:54
The function _PyObject_GetMethod is internal and private, but it should still be declared properly. Currently, it is "manually" declared in two .c files where it's used.
msg345576 - (view) Author: Inada Naoki (methane) * (Python committer) Date: 2019-06-14 10:37
New changeset b2f94730d947f25b8507c5f76202e917683e76f7 by Inada Naoki (Jeroen Demeyer) in branch 'master':
bpo-37249: add declaration of _PyObject_GetMethod (GH-14015)
https://github.com/python/cpython/commit/b2f94730d947f25b8507c5f76202e917683e76f7
History
Date User Action Args
2022-04-11 14:59:16adminsetgithub: 81430
2019-06-14 10:37:37methanesetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-06-14 10:37:19methanesetnosy: + methane
messages: + msg345576
2019-06-12 13:00:22jdemeyersetkeywords: + patch
stage: patch review
pull_requests: + pull_request13879
2019-06-12 12:55:40jdemeyersetnosy: + yselivanov
2019-06-12 12:54:43jdemeyercreate