bpo-37249: add declaration of _PyObject_GetMethod (GH-14015)